Fix flicker with css transformations.

--- a/app/css/base.css
+++ b/app/css/base.css
@@ -183,10 +183,12 @@ a.proxy {
 nav a {
   padding: 3px 7px; }
 
-nav.tabs a.active {
-  background: #eef;
-  border: 1px solid #ccf;
-  border-radius: 3px; }
+nav.tabs {
+  -webkit-backface-visibility: hidden; }
+  nav.tabs a.active {
+    background: #eef;
+    border: 1px solid #ccf;
+    border-radius: 3px; }
 
 header nav:nth-child(2) a {
   padding: 0; }
@@ -208,15 +210,18 @@ a[class]:before {
 a.refresh:before {
   content: '↻'; }
 
-a.inbox:before {
-  content: '⇧';
-  display: inline-block;
-  position: relative;
-  -webkit-transform: rotate(180deg);
-  margin-left: 5px; }
-a.inbox.anim:before {
-  transition: -webkit-transform 1s;
-  -webkit-transform: rotate(540deg); }
+a.inbox {
+  -webkit-backface-visibility: hidden; }
+  a.inbox:before {
+    content: '⇧';
+    display: inline-block;
+    position: relative;
+    -webkit-transform: rotate(180deg);
+    margin-left: 5px; }
+  a.inbox.anim:before {
+    -webkit-backface-visibility: hidden;
+    transition: -webkit-transform 1s;
+    -webkit-transform: rotate(540deg); }
 
 a.contacts:before {
   content: '☎';
