--- a/app/sass/nav.scss
+++ b/app/sass/nav.scss
@@ -21,10 +21,14 @@ nav a {
   padding: 3px 7px;
 }
 
-nav.tabs a.active {
-  background: #eef;
-  border: 1px solid #ccf;
-  border-radius: 3px;
+nav.tabs {
+  -webkit-backface-visibility: hidden;
+
+  a.active {
+    background: #eef;
+    border: 1px solid #ccf;
+    border-radius: 3px;
+  }
 }
 
 header nav:nth-child(2) a {
@@ -54,6 +58,8 @@ a.refresh:before {
 }
 
 a.inbox {
+  -webkit-backface-visibility: hidden;
+
   &:before {
     content: '⇧';
     display: inline-block;
@@ -63,6 +69,7 @@ a.inbox {
   }
 
   &.anim:before {
+    -webkit-backface-visibility: hidden;
     transition: -webkit-transform 1s;
     -webkit-transform: rotate(540deg);
   }
